instances/cp4ba-odm/odm/odm-dc-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
    argocd.argoproj.io/sync-wave: "250"
  resourceVersion: '119398'
  name: icp4adeploy-odm-ds-console-route
  namespace: cp4ba
  labels:
    app: ibm-odm-prod
    app.kubernetes.io/part-of: icp4a
    app.kubernetes.io/instance: icp4adeploy
    release: icp4adeploy
    app.kubernetes.io/version: 21.0.1
    app.kubernetes.io/component: odm
    app.kubernetes.io/managed-by: Operator
    helm.sh/chart: ibm-odm-prod-21.1.0
    app.kubernetes.io/name: ibm-odm-prod
    chart: ibm-odm-prod-21.1.0
    heritage: Helm
spec:
  host: >-
    icp4adeploy-odm-ds-console-route-cp4ba.itzroks-663001qyhn-mz67ha-6ccd7f378ae819553d37d5f2ee142bd6-0000.us-east.containers.appdomain.cloud
  to:
    kind: Service
    name: icp4adeploy-odm-decisionserverconsole
    weight: 100
  port:
    targetPort: decisionserverconsole-https
  tls:
    termination: passthrough
  wildcardPolicy: None
